--- a/css/resume.css
+++ b/css/resume.css
@@ -33,7 +33,7 @@ float: right;
     border-width: 5px;
     border-style: solid;
     height: 30%;
-    width: 25%
+    width: 25%;
 }
 .resizeLamp{
   /* margin-left: 20px; */
@@ -41,7 +41,7 @@ float: right;
   border-color: red;
     border-width: 5px;
     border-style: solid;
-    width: 25%
+    width: 25%;
 }
 td, th {
   border: 1px solid #dddddd;
